force-app/main/default/objects/Account/fields/Account_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Group__c</fullName>
    <label>Account Assignment Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>