force-app/main/default/objects/Account/fields/Account_Closed__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed__c</fullName>
    <description>Credit Specialist to use if an Account has been closed due to credit reasons</description>
    <inlineHelpText>Credit Specialist to use if an Account has been closed due to credit reasons</inlineHelpText>
    <label>Account Closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Account Status Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>