force-app/main/default/objects/Account/fields/Account_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Date__c</fullName>
    <description>For the Credit Team to notate the Date when the Account was Closed.</description>
    <inlineHelpText>For the Credit Team to notate the Date when the Account was Closed</inlineHelpText>
    <label>Account Closed Date</label>
    <type>DateTime</type>
</CustomField>