force-app/main/default/objects/Account/fields/Account_Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Full_Legal_Name__c</fullName>
    <label>Account Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>