force-app/main/default/objects/Account/fields/Account_Manager_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Territory__c</fullName>
    <formula>Account_Manager__r.Territory_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Territory</label>
    <type>Text</type>
</CustomField>