force-app/main/default/objects/Account/fields/Account_Manager_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Transition_Date__c</fullName>
    <description>This is the date field that will be used to determine when a flow customer should be transitioned from the BDM over to the AM on file.</description>
    <label>Account Manager Transition Date</label>
    <type>DateTime</type>
</CustomField>