force-app/main/default/objects/Account/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>This is to pull for Paradot to have the account owner info on the mail merge docs</description>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field not on page layouts</inlineHelpText>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>