force-app/main/default/objects/Account/fields/Account_Owner_Name_paradot__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name_paradot__c</fullName>
    <description>This field is for a paradot mapping since standard fields that can not be mapped</description>
    <formula>Owner.FirstName  +  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not to be used on any record just hidden</inlineHelpText>
    <label>Account Owner Name (paradot)</label>
    <type>Text</type>
</CustomField>