force-app/main/default/objects/Account/fields/Account_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Phone__c</fullName>
    <formula>$User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Phone</label>
    <type>Text</type>
</CustomField>