force-app/main/default/objects/Account/fields/Account_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Text__c</fullName>
    <description>Field to map Lead Source to Account Source</description>
    <inlineHelpText>Field to map Lead Source to Account Source</inlineHelpText>
    <label>Account Source Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>