force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Prospect = Never purchased before
Customer = Has purchased within the last 12 months
Inactive = Has not purchased within the last 12 months
Former = Stopped doing business with us for a specific reason
Hold = Active Customer, on hold (No Order Placed)</description>
    <inlineHelpText>Prospect = Never purchased before
Customer = Has purchased within the last 12 months
Inactive = Has not purchased within the last 12 months
Former = Stopped doing business with us for a specific reason
Hold = Active Customer, on hold (No Order Placed)</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>