force-app/main/default/objects/Account/fields/Activity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Activity_Indicator__c</fullName>
    <formula>IF (ISBLANK( Days_Since_Last_Activity__c), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002YtoG&quot;, &quot;NO ACTIVITIES&quot;), 
IF( AND (Days_Since_Last_Activity__c &gt;=0, Days_Since_Last_Activity__c&lt;31), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002YtoB&quot;,&quot;Less than 30&quot;) , 
IF(AND(Days_Since_Last_Activity__c&gt; 30,Days_Since_Last_Activity__c&lt; 61),IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002Yto6&quot;,&quot;30 to 60&quot;), 
IF( AND(Days_Since_Last_Activity__c&gt; 60,Days_Since_Last_Activity__c&lt; 91), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002Yto1&quot;,&quot;60 to 90&quot;) , 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002YtoG&quot;,&quot;Less than 90&quot;)))))</formula>
    <label>Activity Indicator</label>
    <type>Text</type>
</CustomField>