force-app/main/default/objects/Account/fields/Affiliate_Group__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Group__c</fullName>
    <inlineHelpText>Enter if the Customer is a member of an Affiliated or Sister GPO</inlineHelpText>
    <label>Affiliate Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>