force-app/main/default/objects/Account/fields/All_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>All_Opportunities__c</fullName>
    <description>Calculates the sum of all opportunities</description>
    <inlineHelpText>Calculates the sum of all opportunities</inlineHelpText>
    <label>All Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>