force-app/main/default/objects/Account/fields/Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved__c</fullName>
    <inlineHelpText>Read Only field that will populate based on values in the Customer Service record.</inlineHelpText>
    <label>Amount Approved</label>
    <summarizedField>Customer_Service__c.Amount_Approved__c</summarizedField>
    <summaryForeignKey>Customer_Service__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>