force-app/main/default/objects/Account/fields/Amount_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Resolved__c</fullName>
    <description>Credit Specialist to update the amount we were able to resolve</description>
    <inlineHelpText>Credit Specialist to update the amount we were able to resolve</inlineHelpText>
    <label>Amount Resolved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>