force-app/main/default/objects/Account/fields/Andy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Andy_Notes__c</fullName>
    <description>Field used for custom notes on SFDC team.</description>
    <label>Andy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>