force-app/main/default/objects/Account/fields/Automation_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Automation_Control_Type__c</fullName>
    <label>Automation Control Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>