force-app/main/default/objects/Account/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Development Manager – Managed at the Parent Account</description>
    <inlineHelpText>Business Development Manager – Managed at the Parent Account Level</inlineHelpText>
    <label>Business Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AccountBDM</relationshipLabel>
    <relationshipName>AccountsBDM</relationshipName>
    <type>Lookup</type>
</CustomField>