force-app/main/default/objects/Account/fields/Block_Online_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Block_Online_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell Sears Commercial Online that this accounts users shouldn&#39;t be allowed to place orders</description>
    <label>Block Online Ordering</label>
    <type>Checkbox</type>
</CustomField>