force-app/main/default/objects/Account/fields/Brand_Of_Competitor_Working_With__c.field-meta.xml
<CustomField>
    <fullName>Brand_Of_Competitor_Working_With__c</fullName>
    <description>Brand Of Competitor Currently Working With</description>
    <inlineHelpText>Please select as many as applicable</inlineHelpText>
    <label>Brand Of Competitor Working With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Reasons_For_Not_Working_With_SC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Electrolux</fullName>
            </value>
            <value>
                <fullName>Frigidaire</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>JennAir</fullName>
            </value>
            <value>
                <fullName>Kenmore</fullName>
            </value>
            <value>
                <fullName>Kitchen Aid</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Maytag</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Whirlpool</fullName>
            </value>
            <value>
                <fullName>Wilmar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Do not have a regularly used brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>