force-app/main/default/objects/Account/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Sector</label>
    <referenceTo>Business_Sector__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>