force-app/main/default/objects/Account/fields/Business_Sector_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector_for_Pardot__c</fullName>
    <formula>Business_Sector__c</formula>
    <label>Business Sector for Pardot</label>
    <type>Text</type>
</CustomField>