force-app/main/default/objects/Account/fields/Can_you_give_us_a_reason_for_not_work__c.field-meta.xml
<CustomField>
    <fullName>Can_you_give_us_a_reason_for_not_work__c</fullName>
    <label>Reason for not working with us currently</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Delivery Failure</fullName>
            </value>
            <value>
                <fullName>Installation Issues</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Credit Terms</fullName>
            </value>
            <value>
                <fullName>Lost AM</fullName>
            </value>
            <value>
                <fullName>No access to local rep</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>