force-app/main/default/objects/Account/fields/Case_Sensitive_18_Digit_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Sensitive_18_Digit_Account_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Sensitive 18 Digit Account ID</label>
    <type>Text</type>
</CustomField>