force-app/main/default/objects/Account/fields/Central_Block__c.field-meta.xml
<CustomField>
    <fullName>Central_Block__c</fullName>
    <label>Central Block</label>
    <length>1</length>
    <type>Text</type>
</CustomField>