force-app/main/default/objects/Account/fields/Chargeback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Amount__c</fullName>
    <description>Credit Specialist to indicate the amount of the chargeback</description>
    <inlineHelpText>Credit Specialist to indicate the amount of the chargeback</inlineHelpText>
    <label>Chargeback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>