force-app/main/default/objects/Account/fields/Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Status__c</fullName>
    <description>Credit Specialist to update the Status of the Chargeback</description>
    <inlineHelpText>Credit Specialist to update the Status of the Chargeback</inlineHelpText>
    <label>Chargeback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Collected/Paid</fullName>
            </value>
            <value>
                <fullName>Augusta Working</fullName>
            </value>
            <value>
                <fullName>Referred to 3rd Party Collections</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Uncollectible</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>