force-app/main/default/objects/Account/fields/Chargeback_Type__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Type__c</fullName>
    <description>Credit Team to identify the type of Chargeback</description>
    <inlineHelpText>For the Credit Specialist to identify the type of Chargeback</inlineHelpText>
    <label>Chargeback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Recourse-Gen</fullName>
            </value>
            <value>
                <fullName>Recourse-Gov</fullName>
            </value>
            <value>
                <fullName>Recourse-Cont</fullName>
            </value>
            <value>
                <fullName>Small Bal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>