force-app/main/default/objects/Account/fields/Check_Customer_Accts_for_SAP_Integration__c.field-meta.xml
<CustomField>
    <fullName>Check_Customer_Accts_for_SAP_Integration__c</fullName>
    <formula>IF( BEGINS( SAP_Account_ID__c ,  &quot;00&quot; ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Customer Accts for SAP Integration</label>
    <type>Checkbox</type>
</CustomField>