force-app/main/default/objects/Account/fields/Check_if_RepONE_is_the_reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Check_if_RepONE_is_the_reporting_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag this account as RepOne in the Reporting Group?</description>
    <inlineHelpText>This should be a Yes or No box with the question: &quot;Flag this account as RepOne in the Reporting Group?&quot;</inlineHelpText>
    <label>Check if RepONE is the reporting Group</label>
    <type>Checkbox</type>
</CustomField>