force-app/main/default/objects/Account/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <formula>IF(ISBLANK(ParentId), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Account?</label>
    <type>Checkbox</type>
</CustomField>