force-app/main/default/objects/Account/fields/Closed_Won_Opp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opp__c</fullName>
    <label>Closed/Won Opp</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Closure/Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>