force-app/main/default/objects/Account/fields/Commercial_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Credit_Status__c</fullName>
    <description>Read Only field that will populate from the Customer Service record for new account requests.</description>
    <inlineHelpText>Read Only field that will populate from the Customer Service record for new account requests.</inlineHelpText>
    <label>Commercial Credit Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>