force-app/main/default/objects/Account/fields/Commercial_Marketplace_Invitation_Code__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Marketplace_Invitation_Code__c</fullName>
    <description>Invitation Code number</description>
    <inlineHelpText>This is where you need to enter the Invitation Code for Sears Commercial Marketplace Customers.</inlineHelpText>
    <label>Commercial Marketplace Invitation Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>