force-app/main/default/objects/Account/fields/Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Group__c</fullName>
    <inlineHelpText>Enter if the Customer has a Parent Company or a Large Corporate Group</inlineHelpText>
    <label>Corporate Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>