force-app/main/default/objects/Account/fields/Create_SCO_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_SCO_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell Sears Commercial Online that an account needs to be created and linked</description>
    <label>Create SCO Account</label>
    <type>Checkbox</type>
</CustomField>