force-app/main/default/objects/Account/fields/Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Comments__c</fullName>
    <inlineHelpText>Read Only field from the Credit Service Record</inlineHelpText>
    <label>Credit Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>