force-app/main/default/objects/Account/fields/Credit_Needed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Needed__c</fullName>
    <inlineHelpText>Does this account need credit? If “Yes” a notification email will be sent to the credit team to investigate further.</inlineHelpText>
    <label>Credit Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>