force-app/main/default/objects/Account/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <description>0004	Diners Club Card
ACH	Automated Clrg House
AMEX	American Express
AR	Account Receivable
CASH	Cash
CHCK	Physical Check
COM1	Commercial One
CPRO	Commercial Pro
DISC	Discover Card
ECHK	E-check
GC	Sears Gift Card
INTL	Sears Internal
MC	Master Card
SCHG	Sears Charge Card
SMC	Sears Master Card
VISA	Visa Card
WIRE	Wire</description>
    <inlineHelpText>0004	Diners Club Card
ACH	Automated Clrg House
AMEX	American Express
AR	Account Receivable
CASH	Cash
CHCK	Physical Check
COM1	Commercial One
CPRO	Commercial Pro
DISC	Discover Card
ECHK	E-check
GC	Sears Gift Card
INTL	Sears Internal</inlineHelpText>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0004</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>CHCK</fullName>
            </value>
            <value>
                <fullName>COM1</fullName>
            </value>
            <value>
                <fullName>CPRO</fullName>
            </value>
            <value>
                <fullName>DISC</fullName>
            </value>
            <value>
                <fullName>ECHK</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>SCHG</fullName>
            </value>
            <value>
                <fullName>SMC</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>