force-app/main/default/objects/Account/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Success Specialist – Managed at the Parent Account</description>
    <inlineHelpText>Customer Success Specialist – Managed at the Parent Account</inlineHelpText>
    <label>Customer Success Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (CSS)</relationshipLabel>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>