force-app/main/default/objects/Account/fields/Current_Fiscal_Year_To_Date_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Year_To_Date_Revenue__c</fullName>
    <description>Current fiscal year&#39;s revenue for the account.</description>
    <label>Current Fiscal Year To Date Revenue</label>
    <summarizedField>Line_Of_Billing__c.Total_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Line_Of_Billing__c.Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Line_Of_Billing__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>