force-app/main/default/objects/Account/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <label>Current Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>