force-app/main/default/objects/Account/fields/Current_User_on_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Current_User_on_Account_Team__c</fullName>
    <formula>IF( OwnerId  = $User.Id, True,
 IF(NAM__c= $User.Id, True,
 IF(BDM__c = $User.Id, True,
 IF(CSS__c = $User.Id, True,False))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User on Account Team?</label>
    <type>Checkbox</type>
</CustomField>