force-app/main/default/objects/Account/fields/Customer_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_1__c</fullName>
    <description>Need to decode = 01 - hard code to &quot;Standard&quot;</description>
    <inlineHelpText>01 Split Billing</inlineHelpText>
    <label>Customer Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>01</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>