force-app/main/default/objects/Account/fields/Customer_Group_1_Translated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_1_Translated__c</fullName>
    <formula>CASE(Customer_Group_1__c,
&quot;001&quot;, &quot;Split Billing&quot;,
&quot;&quot;)</formula>
    <inlineHelpText>001	Split Billing</inlineHelpText>
    <label>Customer Group 1 Translated</label>
    <type>Text</type>
</CustomField>