force-app/main/default/objects/Account/fields/Customer_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_2__c</fullName>
    <description>01	AppSel
02	InsPort
03	InsSF
04	InsNV
05	HW</description>
    <inlineHelpText>01	AppSel
02	InsPort
03	InsSF
04	InsNV
05	HW</inlineHelpText>
    <label>Customer Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>01</label>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>