force-app/main/default/objects/Account/fields/Customer_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_3__c</fullName>
    <description>E1	Delivery Rate E1
E2	Delivery Rate E2
E3	Delivery Rate E3
E4	Delivery Rate E4
E5	Delivery Rate E5
PM	Property Management
ST	Standard
STD	Standard</description>
    <inlineHelpText>E1	Delivery Rate E1
E2	Delivery Rate E2
E3	Delivery Rate E3
E4	Delivery Rate E4
E5	Delivery Rate E5
PM	Property Management
ST	Standard
STD	Standard</inlineHelpText>
    <label>Customer Group 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>E5</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
                <default>true</default>
                <label>ST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>