force-app/main/default/objects/Account/fields/Customer_Group_3_Translated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_3_Translated__c</fullName>
    <formula>CASE(Customer_Group_3__c,
&quot;E1&quot;, &quot;Delivery Rate E1&quot;,
&quot;E2&quot;, &quot;Delivery Rate E2&quot;,
&quot;E3&quot;, &quot;Delivery Rate E3&quot;,
&quot;E4&quot;, &quot;Delivery Rate E4&quot;,
&quot;E5&quot;, &quot;Delivery Rate E5&quot;,
&quot;PM&quot;, &quot;Property Management&quot;,
&quot;ST&quot;, &quot;Standard&quot;,
&quot;STD&quot;, &quot;Standard&quot;,
&quot;&quot;)</formula>
    <label>Customer Group 3 Translated</label>
    <type>Text</type>
</CustomField>